--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>JavaScript Lab</title>
 </head>
 <body>
-  hello
+  Worrap
   <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
